<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/helpermessage"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginTop="60dp"
        android:text="@string/enter_the_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameinput"
        android:layout_width="338dp"
        android:layout_height="74dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/input_hint_text"
        android:textAlignment="center"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpermessage" />

    <Button
        android:id="@+id/createbirthdaybutton"
        android:layout_width="242dp"
        android:layout_height="79dp"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:onClick="createbirthdaycard"
        android:text="@string/create_birthday_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameinput" />
</androidx.constraintlayout.widget.ConstraintLayout>